force-app/main/default/objects/npsp__Custom_Column_Header__c/fields/npsp__Field_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>npsp__Field_Api_Name__c</fullName>
    <description>The API name of the field displayed in the list view.</description>
    <inlineHelpText>Nombre de API del campo mostrado en la vista de lista.</inlineHelpText>
    <label>Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>