force-app/main/default/objects/npsp__Custom_Column_Header__c/fields/npsp__Index__c.field-meta.xml
<CustomField>
    <fullName>npsp__Index__c</fullName>
    <description>The position of the field in the list view.</description>
    <inlineHelpText>La posición del campo en la vista de lista.</inlineHelpText>
    <label>Index</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>